welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:4: error: type mismatch;
 found   : Int(19)
 required: Boolean
    if (13<a<19 || 13<b<19){
             ^hasTeen:4: error: type mismatch;
 found   : Int(19)
 required: Boolean
    if (13<a<19 || 13<b<19){
                        ^hasTeen:5: error: reassignment to val
    a=true
     ^hasTeen:6: error: type mismatch;
 found   : Int(19)
 required: Boolean
  }else if(13<c<19){
                ^hasTeen:7: error: reassignment to val
      a=true
       ^hasTeen:9: error: reassignment to val
      a=false
       ^hasTeen:11: error: type mismatch;
 found   : Int
 required: Boolean
return a
       ^